feat: github actions feat: argument support

--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,21 @@
 
 	<groupId>de.ngloader</groupId>
 	<artifactId>BMA-Exporter</artifactId>
-	<version>0.0.1</version>
+	<version>${revision}</version>
+
+	<packaging>jar</packaging>
+
+	<properties>
+		<revision>1.0.0-b0</revision>
+		
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+		<java.version>17</java.version>
+
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
 	<dependencies>
-		<!-- PDFBox Dependency -->
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
@@ -25,4 +36,31 @@
 			<version>1.12.0</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.5.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>
+										de.ngloader.bmaexporter.BMAExporter</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
